force-app/main/default/objects/VMAP__c/VMAP__c.object-meta.xml
<CustomObject>
    <description>Account info in Virtustream</description>
    <label>Account Search Details</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Search Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>