force-app/main/default/objects/VMAP__c/fields/Core_Quota_Rep_EMC_Rep__c.field-meta.xml
<CustomField>
    <fullName>Core_Quota_Rep_EMC_Rep__c</fullName>
    <label>EMC Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>