force-app/main/default/objects/VMAP__c/fields/EMC_Area__c.field-meta.xml
<CustomField>
    <fullName>EMC_Area__c</fullName>
    <label>EMC Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>