force-app/main/default/objects/VMAP__c/fields/EMC_Classification__c.field-meta.xml
<CustomField>
    <fullName>EMC_Classification__c</fullName>
    <label>EMC Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>