force-app/main/default/objects/VMAP__c/fields/EMC_District__c.field-meta.xml
<CustomField>
    <fullName>EMC_District__c</fullName>
    <label>EMC District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>