force-app/main/default/objects/VMAP__c/fields/EMC_Division__c.field-meta.xml
<CustomField>
    <fullName>EMC_Division__c</fullName>
    <label>EMC Division</label>
    <length>50</length>
    <type>Text</type>
</CustomField>