force-app/main/default/objects/VMAP__c/fields/EMC_Territory__c.field-meta.xml
<CustomField>
    <fullName>EMC_Territory__c</fullName>
    <label>EMC Territory</label>
    <length>50</length>
    <type>Text</type>
</CustomField>