force-app/main/default/objects/VMAP__c/fields/Global_Ultimate_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_ID__c</fullName>
    <label>GU DUNS</label>
    <length>25</length>
    <type>Text</type>
</CustomField>