force-app/main/default/objects/VMAP__c/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <label>Industry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>