force-app/main/default/objects/VMAP__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VMAP</relationshipName>
    <type>Lookup</type>
</CustomField>