force-app/main/default/objects/VMAP__c/fields/UCID__c.field-meta.xml
<CustomField>
    <fullName>UCID__c</fullName>
    <externalId>true</externalId>
    <label>UCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>