force-app/main/default/objects/VMAP__c/fields/Virtustream_Classification__c.field-meta.xml
<CustomField>
    <fullName>Virtustream_Classification__c</fullName>
    <label>Virtustream Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>