force-app/main/default/objects/VMAP__c/fields/VS_Direct_rep_on_Territory__c.field-meta.xml
<CustomField>
    <fullName>VS_Direct_rep_on_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VS Direct Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VMAP</relationshipName>
    <type>Lookup</type>
</CustomField>