force-app/main/default/objects/VMAP__c/fields/VS_Territory__c.field-meta.xml
<CustomField>
    <fullName>VS_Territory__c</fullName>
    <label>VS District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>