force-app/main/default/objects/VMAP__c/fields/VS_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_Territory_Id__c</fullName>
    <label>VS Territory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>