force-app/main/default/objects/VMAP__c/fields/VS_Territory_Url__c.field-meta.xml
<CustomField>
    <fullName>VS_Territory_Url__c</fullName>
    <label>VS Territory URL</label>
    <type>Url</type>
</CustomField>