force-app/main/default/objects/VMAP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>UCID__c</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>State_Province__c</columns>
    <columns>Related_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>