force-app/main/default/objects/VMAP__c/listViews/ChristinePhillipsView.listView-meta.xml
<ListView>
    <fullName>ChristinePhillipsView</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>State_Province__c</columns>
    <columns>Street__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Christine</value>
    </filters>
    <label>ChristinePhillipsView</label>
</ListView>